syntax = "proto3";

package profile;
option go_package="proto/profile";

import "validate/validate.proto";

service ProfileService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
}

enum Sex {
  UNKNOWN = 0;
  MALE = 1;
  FEMALE = 2;
}

message Profile {
  int64 id = 1[(validate.rules).int64.gt = 0];
  string first_name = 2[(validate.rules).string.min_len = 3];
  string last_name = 3[(validate.rules).string.min_len = 3];
  int64 age = 4[(validate.rules).int64.gt = 7];
  string email = 5[(validate.rules).string.email = true]; 
  Sex sex = 6;
}

message CreateRequest {
  Profile profile = 1;
}

message CreateResponse{
  Profile profile = 1;
  string created_at = 2;
}

message UpdateRequest {
  Profile profile = 1;
}

message UpdateResponse {
  Profile profile = 1;
}